Pom nuovo, modifiche su login e logout per sistemare i messaggi